--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-mido==1.2.9               # via -r requirements.in
-rtmidi==2.3.4             # via -r requirements.in
+evdev==1.3.0              # via pynput
+pynput==1.7.1             # via -r requirements.in
+python-xlib==0.28         # via pynput
+rtmidi2==0.8.7            # via -r requirements.in
+six==1.15.0               # via pynput, python-xlib, structlog
+structlog==20.1.0         # via -r requirements.in
