--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist = py{37}
+envlist = py{310}
 skipsdist = True
-requires = virtualenv==16.7.10
+verbosity = 3
 
 # Base environment for testing and building
 [testenv]
@@ -17,10 +17,11 @@ install_command=python -m pip install --no-input {opts} {packages}
 commands = {posargs:make help}
 
 # Environment for local development
-[testenv:midicka]
-basepython=python3.7
-depends=py37
-envdir = {toxworkdir}/midicka
+[testenv:devel]
+allowlist_externals = make
+basepython=python3.10
+depends=py310
+envdir = {toxworkdir}/devel
 
 # Code style configuration
 [pycodestyle]
