--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,34 @@
-evdev==1.3.0              # via pynput
-pynput==1.7.1             # via -r requirements.in
-python-xlib==0.28         # via pynput
-rtmidi2==0.8.7            # via -r requirements.in
-six==1.15.0               # via pynput, python-xlib, structlog
-structlog==20.1.0         # via -r requirements.in
+annotated-types==0.6.0
+    # via pydantic
+click==8.1.7
+    # via typer
+evdev==1.3.0
+    # via pynput
+mido==1.3.0
+    # via -r requirements.in
+packaging==23.2
+    # via mido
+pydantic==2.4.2
+    # via -r requirements.in
+pydantic-core==2.10.1
+    # via pydantic
+pynput==1.7.1
+    # via -r requirements.in
+python-rtmidi==1.5.7
+    # via -r requirements.in
+python-xlib==0.28
+    # via pynput
+six==1.15.0
+    # via
+    #   pynput
+    #   python-xlib
+    #   structlog
+structlog==20.1.0
+    # via -r requirements.in
+typer==0.9.0
+    # via -r requirements.in
+typing-extensions==4.8.0
+    # via
+    #   pydantic
+    #   pydantic-core
+    #   typer
